--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,11 @@
 
 html {
     font-size: 1rem;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto Slab', serif;
     color: #00515D;
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
     html {
 
     }
@@ -49,7 +49,7 @@ html {
     html {
         
     }
-}
+} */
 
 /*--------------------------------------------------------------
     4.0 - ELEMENTS
@@ -63,30 +63,46 @@ h2 {
     font-weight: 400;
 }
 
+h1, 
+h2,
+h3 {
+    color: #00B0A3;
+}
+
+h2, 
+h3 {
+    text-align: left;
+}
+
 h1 {
-    font-size: 6rem;
-    margin: 0;
+    font-size: 4.5rem;
+    padding-bottom: 20px;
+    margin: .7em 0 0;
 }
 
 h2 {
-    font-size: 2.6rem;
+    font-size: 3rem;
+    margin: 4rem 0 1rem;
 }
 
 h3 {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     font-weight: 700;
+    margin: 5px 0 10px;
 }
 
 p {
-    font-size: 1em;
-    line-height: 1.75em;
+    font-size: 1.2rem;
+    line-height: 1.8em;
+    margin: 0;
 }
 
 i {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
+
 }
 
-@media screen and (min-width: 768px) {
+/* @media screen and (min-width: 768px) {
 
 
 }
@@ -94,7 +110,7 @@ i {
 @media screen and (min-width: 1024px) {
 
   
-}
+} */
 
 /*--------------------------------------------------------------
     5.0 - OBJECTS
@@ -291,6 +307,21 @@ i {
     6.0 - COMPONENTS
 -------------------------------------------------------------- */
 
+header nav,
+nav ul,
+footer a {
+    padding: 0;
+}
+
+body > header,
+#layout .col-lg-4,
+#benefits,
+#benefits h2,
+#benefits h3,
+footer {
+    text-align: center;
+}
+
 /* ----- HEADER ----- */
 
 header img {
@@ -304,35 +335,38 @@ header > div:last-child {
     -o-backgroun-size: contain;
     -ms-background-size: contain;
     background-size: contain;
-    padding: 95px 0 60px;
-    margin-top: 25px;
     background-color: #FFD8DB;
+    padding: 110px 0 40px;
+}
 
+
+body > header {
+    margin-top: 15px;
 }
 
 header nav {
     width: 360px;
+    margin-bottom: 10px;
 }
 
 header li {
     display: inline-block;
-    margin-left: 20px;
-    list-style-type: none;
+    padding: 0 10px;
+}
+
+nav ul {
+    margin: 0;
 }
 
 nav li {
     list-style-type: none;
-    }
-
-nav ul {
-    padding: 0;
-}
+} 
 
 a {
     text-decoration: none;
     color: #00B0A3;
     padding: 4px 8px;
-    font: 400 16px 'Open Sans', sans-serif;
+    font: 400 1.2rem 'Open Sans', sans-serif;
 }
 
 a:hover {
@@ -341,32 +375,79 @@ a:hover {
     border-radius: 16px;
 }
 
+header .row {
+    border-bottom: 6px solid #FFD8DB;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    padding-top: 30px;
+}
+
+header p {
+    font-size: 1.5rem;
+}
+
+header > div:last-child {
+    margin-top: 10em;
+}
 
 /* ----- SYSYTEMS ----- */
 
+section .row {
+    margin-top: 10px;
+}
+
 /* ----- LAYOUT ----- */
+
+#layout .col-lg-4 {
+    background-color: #FFD8DB;
+    padding: 60px 30px;
+    margin: 120px 0;
+}
+
+#layout .col-lg-4 h2 {
+    margin: 0 0 30px;
+}
+
+#layout h3 {
+    margin-top: 40px;
+}
 
 /* ----- TESTING ----- */
 
 /* ----- BENEFITS ----- */
 
+#benefits h2 {
+    margin-top: 100px;
+}
+
+#benefits i {
+    font-size: 3.7rem;
+}
+
 /* ----- FOOTER ----- */
 
+footer {
+    padding: 30px 0;
+    border-top: 6px solid #FFD8DB;
+}
+
 footer img {
-    width: 80px;
+    width: 130px;
+    margin-top: 20px;
 }
 
 footer li {
-    padding-bottom: 10px;
+    padding-bottom: 25px;
 }
 
 h4 {
-    margin: 0;
+    font-size: 1.5em;
+    margin: 5px 0 0;
 }
 
-footer a {
-    padding: 0;
-}
 /*--------------------------------------------------------------
     7.0 - UTILITY
 -------------------------------------------------------------- */
