--- a/css/main.css
+++ b/css/main.css
@@ -34,8 +34,7 @@
 }
 
 html {
-    font-size: 1rem;
-    font-family: 'Roboto Slab', serif;
+    font: 1rem 'Roboto Slab', serif;
     color: #00515D;
 }
 
@@ -76,19 +75,19 @@ h3 {
 
 h1 {
     font-size: 4.5rem;
-    padding-bottom: 20px;
-    margin: .7em 0 0;
+    margin: 2.2em 0 0;
+    padding-top: 3.5em;
 }
 
 h2 {
     font-size: 3rem;
-    margin: 4rem 0 1rem;
+    margin: 4em 0 1em;
 }
 
 h3 {
     font-size: 1.5rem;
     font-weight: 700;
-    margin: 5px 0 10px;
+    margin: .3em 0 .6em;
 }
 
 p {
@@ -102,6 +101,20 @@ i {
 
 }
 
+/* ----- ANCHOR ----- */
+
+a {
+    text-decoration: none;
+    color: #00B0A3;
+    padding: 4px 8px;
+    font: 400 1.2rem 'Open Sans', sans-serif;
+}
+
+a:hover {
+    background-color: #FFD8DB;
+    color: #003833;
+    border-radius: 16px;
+}
 /* @media screen and (min-width: 768px) {
 
 
@@ -328,7 +341,7 @@ header img {
     width: 100px;
 }
 
-header > div:last-child {
+header > div:last-child .wrapper{
     background: url(../img/bg-header-balloons.jpg) left no-repeat;
     -moz-background-size: contain;
     -webkit-background-size: contain;
@@ -336,7 +349,7 @@ header > div:last-child {
     -ms-background-size: contain;
     background-size: contain;
     background-color: #FFD8DB;
-    padding: 110px 0 40px;
+    width: 100%;
 }
 
 
@@ -345,7 +358,6 @@ body > header {
 }
 
 header nav {
-    width: 360px;
     margin-bottom: 10px;
 }
 
@@ -362,27 +374,14 @@ nav li {
     list-style-type: none;
 } 
 
-a {
-    text-decoration: none;
-    color: #00B0A3;
-    padding: 4px 8px;
-    font: 400 1.2rem 'Open Sans', sans-serif;
-}
-
-a:hover {
-    background-color: #FFD8DB;
-    color: #003833;
-    border-radius: 16px;
-}
-
-header .row {
+header > div:first-child {
     border-bottom: 6px solid #FFD8DB;
     width: 100%;
     position: fixed;
     top: 0;
     left: 0;
     background-color: #fff;
-    padding-top: 30px;
+    padding-top: 1.875rem;
 }
 
 header p {
@@ -390,29 +389,29 @@ header p {
 }
 
 header > div:last-child {
-    margin-top: 10em;
+    margin-top: .625em;
 }
 
 /* ----- SYSYTEMS ----- */
 
 section .row {
-    margin-top: 10px;
+    margin-top: .625em;
 }
 
 /* ----- LAYOUT ----- */
 
 #layout .col-lg-4 {
     background-color: #FFD8DB;
-    padding: 60px 30px;
-    margin: 120px 0;
+    padding: 3.75em 1.9em;
+    margin: 7.5em 0;
 }
 
 #layout .col-lg-4 h2 {
-    margin: 0 0 30px;
+    margin: 0 0 1.9em;
 }
 
 #layout h3 {
-    margin-top: 40px;
+    margin-top: 2.5em;
 }
 
 /* ----- TESTING ----- */
@@ -420,7 +419,7 @@ section .row {
 /* ----- BENEFITS ----- */
 
 #benefits h2 {
-    margin-top: 100px;
+    margin-top: 6.25em;
 }
 
 #benefits i {
@@ -430,22 +429,22 @@ section .row {
 /* ----- FOOTER ----- */
 
 footer {
-    padding: 30px 0;
+    padding: 1.9em 0;
     border-top: 6px solid #FFD8DB;
 }
 
 footer img {
     width: 130px;
-    margin-top: 20px;
+    margin-top: 1.25em;
 }
 
 footer li {
-    padding-bottom: 25px;
+    padding-bottom: 1.6em;
 }
 
 h4 {
-    font-size: 1.5em;
-    margin: 5px 0 0;
+    font-size: 1.5rem;
+    margin: .3em 0 0;
 }
 
 /*--------------------------------------------------------------
