--- a/css/main.css
+++ b/css/main.css
@@ -74,20 +74,21 @@ h3 {
 }
 
 h1 {
-    font-size: 4.5rem;
-    margin: 2.2em 0 0;
+    font-size: 4.3rem;
+    line-height: .5em;
+    margin-top: 2.45em;
     padding-top: 3.5em;
 }
 
 h2 {
-    font-size: 3rem;
-    margin: 4em 0 1em;
+    font-size: 2.8rem;
+    margin: 1em 0 0;
 }
 
 h3 {
     font-size: 1.5rem;
     font-weight: 700;
-    margin: .3em 0 .6em;
+    margin: 0 0 .6em;
 }
 
 p {
@@ -321,8 +322,7 @@ a:hover {
 -------------------------------------------------------------- */
 
 header nav,
-nav ul,
-footer a {
+nav ul {
     padding: 0;
 }
 
@@ -385,7 +385,8 @@ header > div:first-child {
 }
 
 header p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    margin-bottom: 2.6em;
 }
 
 header > div:last-child {
@@ -398,6 +399,11 @@ section .row {
     margin-top: .625em;
 }
 
+.col-sm-2 {
+    padding-top: .5em;
+    text-align: center;
+}
+
 /* ----- LAYOUT ----- */
 
 #layout .col-lg-4 {
@@ -407,23 +413,39 @@ section .row {
 }
 
 #layout .col-lg-4 h2 {
-    margin: 0 0 1.9em;
+    margin: 0 0 .3em;
 }
 
 #layout h3 {
-    margin-top: 2.5em;
+    margin: 1.8em 0 .3em;
 }
 
 /* ----- TESTING ----- */
 
+#testing .col-lg-5 {
+    background: url(../img/balloon-rainbow.jpg) center no-repeat;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-backgroun-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    display: none;
+    
+}
+
 /* ----- BENEFITS ----- */
 
 #benefits h2 {
-    margin-top: 6.25em;
+    margin-top: 1.8em;
 }
 
 #benefits i {
     font-size: 3.7rem;
+}
+
+#benefits header p {
+    font-size: 1.2rem;
 }
 
 /* ----- FOOTER ----- */
@@ -431,6 +453,7 @@ section .row {
 footer {
     padding: 1.9em 0;
     border-top: 6px solid #FFD8DB;
+    margin-top: 3em;
 }
 
 footer img {
@@ -445,6 +468,10 @@ footer li {
 h4 {
     font-size: 1.5rem;
     margin: .3em 0 0;
+}
+
+footer p {
+    font-size: 1.1rem;
 }
 
 /*--------------------------------------------------------------
