--- a/css/main.css
+++ b/css/main.css
@@ -38,17 +38,6 @@ html {
     color: #00515D;
 }
 
-/* @media screen and (min-width: 768px) {
-    html {
-
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    html {
-        
-    }
-} */
 
 /*--------------------------------------------------------------
     4.0 - ELEMENTS
@@ -69,13 +58,13 @@ h3 {
 }
 
 h1 {
-    font-size: 4.3rem;
+    font-size: 3.8rem;
     line-height: 1.2em;
-    margin: 7em 0 .25em;
+    margin: 4.5em 0 .25em;
 }
 
 h2 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
     line-height: 1.5em;
     margin: 1em 0 .2em;
 }
@@ -88,25 +77,65 @@ h3 {
 }
 
 p {
-    font-size: 1.2rem;
-    line-height: 1.8em;
+    font-size: 1rem;
+    line-height: 1.9em;
     margin: 0;
 }
 
 i {
-    font-size: 2.3rem;
+    font-size: 2rem;
 
 }
 
 @media screen and (min-width: 768px) {
     h1 {
-        font-size: 7rem;
-        line-height: 1em;
-        margin: 1.25em 0 0;
+        font-size: 6.3rem;
+        margin-top: 5em;
+    }
+
+    h2 {
+        font-size: 3.5rem;
+        line-height: 1.5em;
+    }
+    
+    h3 {
+        font-size: 2rem;
     }
     
     p {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
+        line-height: 1.9em;
+    }
+    
+    i {
+        font-size: 3rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    h1 {
+        font-size: 7rem;
+        line-height: 1em;
+        margin: 1.4em 0 0;
+    }
+
+    h2 {
+        font-size: 3rem;
+        line-height: 1.5em;
+    }
+
+    h3 {
+        font-size: 1.6rem;
+        margin: 0;
+    }
+
+    p {
+        font-size: 1.3rem;
+        line-height: 1.8em;
+    }
+
+    i {
+        font-size: 3rem;
     }
 }
 
@@ -125,6 +154,17 @@ a:hover {
     border-radius: 16px;
 }
 
+@media screen and (min-width: 768px) {
+    a {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    a {
+        font-size: 1.3rem;
+    }
+}
 
 /*--------------------------------------------------------------
     5.0 - OBJECTS
@@ -348,7 +388,7 @@ footer {
 /* ----- HEADER ----- */
 
 header img {
-    width: 100px;
+    width: 110px;
 }
 
 header > div:last-child .wrapper {
@@ -366,13 +406,8 @@ header > div:last-child {
     margin-top: .625em;
 }
 
-
 body > header {
     margin-top: 15px;
-}
-
-header nav {
-    margin-bottom: 10px;
 }
 
 header li {
@@ -390,7 +425,7 @@ nav li {
 } 
 
 header > div:first-child {
-    border-bottom: 6px solid #FFD8DB;
+    border-bottom: 10px solid #FFD8DB;
     width: 100%;
     position: fixed;
     top: 0;
@@ -399,9 +434,17 @@ header > div:first-child {
     padding-top: 1.875rem;
 }
 
-header p {
-    font-size: 1.3rem;
-    margin-bottom: 3em;
+body > header p {
+    font-size: 1.3em;
+    margin-bottom: 3.5em;
+}
+
+@media screen and (min-width: 768px) {
+    
+    body > header p {
+        font-size: 2em;
+        margin-bottom: 3em;
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -412,6 +455,7 @@ header p {
 
     header nav {
         text-align: right;
+        margin-top: 15px;
     }
 
     header > div:last-child {
@@ -424,11 +468,22 @@ header p {
         margin: 0 auto;
     }
 
-    header p {
+    body > header p {
         font-size: 1.5rem;
+        margin-top: .3em;
     }
     
+    header img {
+        width: 140px;
+    }
+
+    header > div:first-child {
+        padding: 1.7rem 0 0.4rem;
+    }
 }
+
+
+
 /* ----- SYSYTEMS ----- */
 
 section .row {
@@ -440,7 +495,7 @@ section .row {
     text-align: center;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     #systems, 
     #systems h3 {
         text-align: center;
@@ -453,6 +508,7 @@ section .row {
     section .row {
         margin-top: 1em;
     }
+    
 }
 
 /* ----- LAYOUT ----- */
@@ -464,12 +520,34 @@ section .row {
 }
 
 #layout .col-lg-4 h2 {
-    font-size: 2.6rem;
+    font-size: 2.3rem;
     margin: 0 0 .3em;
 }
 
 #layout h3 {
     margin: 1.8em 0 .3em;
+}
+
+
+@media screen and (min-width: 768px) {
+    #layout .col-lg-4 h2 {
+        font-size: 3.2rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+
+    #layout {
+        flex-direction: row-reverse;
+    }
+
+    #layout h3 {
+        margin: 1em 0 .3em;
+    }
+
+    #layout .col-lg-8 {
+        padding-right: 25px;
+    }
 }
 
 /* ----- TESTING ----- */
@@ -483,10 +561,20 @@ section .row {
         -o-backgroun-size: cover;
         -ms-background-size: cover;
         background-size: cover;
-        
+    }
+
+    #testing .col-lg-7 {
+        padding-left: 25px;
+    }
+
+    #testing {
+        margin-top: 5em;
+    }
+
+    #testing h2 {
+        margin-top: 0;
     }
 }
-
 
 
 /* ----- BENEFITS ----- */
@@ -495,25 +583,36 @@ section .row {
     margin-top: 1.8em;
 }
 
-#benefits i {
-    font-size: 3.7rem;
+@media screen and (min-width: 1024px) {
+    #benefits .col-lg-6 {
+        text-align: left;
+    }
+
+    #benefits h3 {
+        text-align: left;
+        margin-bottom: 0;
+    }
+
+    #benefits .col-lg-2 {
+        text-align: right;
+    }
+
+    #benefits .col-lg-6:first-child {
+        padding-right: 25px;
+    }
 }
 
-#benefits header p {
-    font-size: 1.2rem;
-    margin-bottom: 1.5em;
-}
 
 /* ----- FOOTER ----- */
 
 footer {
     padding: 1.9em 0;
-    border-top: 6px solid #FFD8DB;
+    border-top: 10px solid #FFD8DB;
     margin-top: 3em;
 }
 
 footer img {
-    width: 130px;
+    width: 140px;
     margin-top: 1.25em;
 }
 
@@ -522,12 +621,19 @@ footer li {
 }
 
 h4 {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin: .3em 0 0;
 }
 
 footer p {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+}
+
+@media screen and (min-width: 768px) {
+   
+    h4 {
+        font-size: 1.5rem;
+    }
 }
 
 @media screen and (min-width: 1024px) {
@@ -535,7 +641,18 @@ footer p {
     footer nav {
         text-align: left;
     }
+
+    footer .row {
+        flex-direction: row-reverse;
+        text-align: left;
+    }
+
+    footer img {
+        margin-top: 0;
+    }
 }
+
+
 /*--------------------------------------------------------------
     7.0 - UTILITY
 -------------------------------------------------------------- */
