--- a/css/main.css
+++ b/css/main.css
@@ -57,6 +57,11 @@ h3 {
     color: #00B0A3;
 }
 
+h2 ,
+p {
+    margin: 0;
+}
+
 h1 {
     font-size: 3.8rem;
     line-height: 1.2em;
@@ -66,7 +71,7 @@ h1 {
 h2 {
     font-size: 2.5rem;
     line-height: 1.5em;
-    margin: 1em 0 .2em;
+    padding: 1em 0 .2em;
 }
 
 h3 {
@@ -76,10 +81,14 @@ h3 {
     text-align: left;
 }
 
+h4 {
+    font-size: 1.2rem;
+    margin: .3em 0 0;
+}
+
 p {
     font-size: 1rem;
     line-height: 1.9em;
-    margin: 0;
 }
 
 i {
@@ -88,9 +97,15 @@ i {
 }
 
 @media screen and (min-width: 768px) {
+
+    p,
+    h4 {
+        font-size: 1.5rem;
+    }
+
     h1 {
         font-size: 6.3rem;
-        margin-top: 5em;
+        margin-top: 3em;
     }
 
     h2 {
@@ -103,7 +118,6 @@ i {
     }
     
     p {
-        font-size: 1.5rem;
         line-height: 1.9em;
     }
     
@@ -113,6 +127,7 @@ i {
 }
 
 @media screen and (min-width: 1024px) {
+
     h1 {
         font-size: 7rem;
         line-height: 1em;
@@ -121,7 +136,6 @@ i {
 
     h2 {
         font-size: 3rem;
-        line-height: 1.5em;
     }
 
     h3 {
@@ -132,10 +146,6 @@ i {
     p {
         font-size: 1.3rem;
         line-height: 1.8em;
-    }
-
-    i {
-        font-size: 3rem;
     }
 }
 
@@ -158,6 +168,7 @@ a:hover {
     a {
         font-size: 1.5rem;
     }
+    
 }
 
 @media screen and (min-width: 1024px) {
@@ -381,6 +392,7 @@ body > header,
 #benefits,
 #benefits h2,
 #benefits h3,
+.col-sm-2,
 footer {
     text-align: center;
 }
@@ -403,7 +415,6 @@ header > div:last-child .wrapper {
 
 header > div:last-child {
     background-color: #FFD8DB;
-    margin-top: .625em;
 }
 
 body > header {
@@ -420,7 +431,6 @@ nav ul {
 }
 
 nav li {
-    list-style-type: none;
     margin-bottom: 10px;
 } 
 
@@ -431,23 +441,27 @@ header > div:first-child {
     top: 0;
     left: 0;
     background-color: #fff;
-    padding-top: 1.875rem;
+    padding-top: 1.875em;
 }
 
 body > header p {
-    font-size: 1.3em;
+    font-size: 1.3rem;
     margin-bottom: 3.5em;
 }
 
 @media screen and (min-width: 768px) {
     
     body > header p {
-        font-size: 2em;
+        font-size: 2rem;
         margin-bottom: 3em;
     }
 }
 
 @media screen and (min-width: 1024px) {
+
+    header > div:last-child {
+        text-align: center;
+    }
 
     body > header {
         text-align: left;
@@ -455,16 +469,14 @@ body > header p {
 
     header nav {
         text-align: right;
-        margin-top: 15px;
+        margin-top: .95em;
     }
 
     header > div:last-child {
         margin-top: 113px;
-        text-align: center;
     }
    
     header > div:last-child div {
-        text-align: center;
         margin: 0 auto;
     }
 
@@ -478,21 +490,23 @@ body > header p {
     }
 
     header > div:first-child {
-        padding: 1.7rem 0 0.4rem;
+        padding: 1.7em 0 0.4em;
     }
 }
 
 
-
 /* ----- SYSYTEMS ----- */
 
-section .row {
-    margin-top: .625em;
+#systems {
+    margin-top: 1em;
 }
 
 .col-sm-2 {
     padding-top: .5em;
-    text-align: center;
+}
+
+#systems .col-center {
+    margin-bottom: 1em;
 }
 
 @media screen and (min-width: 1024px) {
@@ -516,7 +530,7 @@ section .row {
 #layout .col-lg-4 {
     background-color: #FFD8DB;
     padding: 3.75em 1.9em;
-    margin: 4.5em 0;
+    margin: 10em 0 1em;
 }
 
 #layout .col-lg-4 h2 {
@@ -545,8 +559,8 @@ section .row {
         margin: 1em 0 .3em;
     }
 
-    #layout .col-lg-8 {
-        padding-right: 25px;
+    #layout .col-lg-4 h2 {
+        font-size: 2.6rem;
     }
 }
 
@@ -563,33 +577,31 @@ section .row {
         background-size: cover;
     }
 
-    #testing .col-lg-7 {
-        padding-left: 25px;
-    }
-
     #testing {
-        margin-top: 5em;
+        padding-top: 5em;
     }
 
     #testing h2 {
         margin-top: 0;
+        padding: 0;
     }
 }
 
 
 /* ----- BENEFITS ----- */
 
-#benefits h2 {
-    margin-top: 1.8em;
+#benefits header {
+    margin: 0 auto;
 }
 
 @media screen and (min-width: 1024px) {
-    #benefits .col-lg-6 {
+
+    #benefits .col-lg-6,
+    #benefits h3 {
         text-align: left;
     }
 
     #benefits h3 {
-        text-align: left;
         margin-bottom: 0;
     }
 
@@ -612,17 +624,16 @@ footer {
 }
 
 footer img {
-    width: 140px;
+    width: 115px;
     margin-top: 1.25em;
+}
+
+footer ul {
+    list-style-type: none;
 }
 
 footer li {
     margin-bottom: 1.6em;
-}
-
-h4 {
-    font-size: 1.2rem;
-    margin: .3em 0 0;
 }
 
 footer p {
@@ -630,17 +641,6 @@ footer p {
 }
 
 @media screen and (min-width: 768px) {
-   
-    h4 {
-        font-size: 1.5rem;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-
-    footer nav {
-        text-align: left;
-    }
 
     footer .row {
         flex-direction: row-reverse;
@@ -650,8 +650,11 @@ footer p {
     footer img {
         margin-top: 0;
     }
-}
 
+    footer a {
+        font-size: 1.3rem;
+    }
+}
 
 /*--------------------------------------------------------------
     7.0 - UTILITY
